src/test/deca/context/invalid/non_provided/bad_decl.deca
// Description:
//    Declaration d'une variable 'void', contextuellement faux
//
// Resultats:
//    Variables can't be declared as void type
// 
// Historique:
//    cree le 14/01/2020

{
    void x ;
}